<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sobag.parsetemplate.LoginActivity"
    android:background="@color/background_black">

    <TextView
        android:tag="tv_title"
        android:id="@+id/tv_title"
        android:text="@string/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/title_text"
        />

    <RelativeLayout
        android:id="@+id/but_facebook"
        android:layout_below="@id/tv_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/fb_signup_button_with_icon"
        android:clickable="true"
        android:gravity="center"
        android:padding="5dp"
        android:onClick="onFacebookLogin"
        >
        <ImageView
            android:id="@+id/iv_fbIcon"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:clickable="false"
            android:background="#00000000"
            android:src="@drawable/facebook_f"
            android:padding="5dp"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_toRightOf="@id/iv_fbIcon"
            android:tag="tv_fb_button_label"
            android:id="@+id/tv_fb_button_label"
            style="@style/fb_signup_button_with_icon_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:background="#00000000"
            android:text="@string/fb_login_button_text"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <TextView
        android:tag="tv_or"
        android:id="@+id/tv_or"
        android:layout_below="@+id/but_facebook"
        android:text="@string/text_or"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/subtitle_text"
        android:padding="20dp"/>

    <EditText
        android:layout_below="@+id/tv_or"
        android:tag="et_username"
        android:id="@+id/et_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username_short"
        android:drawableLeft="@drawable/ic_action_user"
        style="@style/editTextField"
        android:singleLine="true"/>

    <EditText
        android:tag="et_password"
        android:id="@+id/et_password"
        android:layout_below="@+id/et_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:password="true"
        android:drawableLeft="@drawable/ic_action_lock_closed"
        android:hint="@string/hint_pw"
        style="@style/editTextField"
        android:singleLine="true"
        android:inputType="textPassword"
        />

    <RelativeLayout
        android:id="@+id/but_signup"
        android:layout_below="@id/et_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/signup_button_with_icon"
        android:clickable="true"
        android:gravity="center"
        android:padding="5dp"
        android:onClick="onLogin"
        >
        <ImageView
            android:id="@+id/iv_fbIconTemp"
            android:layout_centerInParent="true"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:clickable="false"
            android:background="#00000000"
            android:padding="5dp"
            android:visibility="invisible"
            />
        <TextView
            android:tag="tv_login_button_label"
            android:id="@+id/tv_login_label"
            style="@style/signup_button_with_icon_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:background="#00000000"
            android:text="@string/but_login"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

    <ProgressBar
        android:tag="progressBar"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

</RelativeLayout>
