<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:background="@color/black">
    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_headerbar"
        android:padding="10dp"
        >
        <com.makeramen.RoundedImageView
            android:layout_toRightOf="@+id/fb_image"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/iv_image"
            android:scaleType="centerCrop"
            app:corner_radius="30dp"
            app:border_width="1dp"
            app:border_color="@color/hint_grey"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_image">
            <TextView
                android:id="@+id/tv_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                style="@style/sidebar_user"
                />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_rideNow"
        android:background="@drawable/green_selector"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:clickable="true">
        <TextView
            android:id="@+id/tv_ride_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sidebar_newRide"
            android:text="@string/item_ride_now"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@drawable/grey_selector"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:clickable="true">
        <ImageView
            android:id="@+id/iv_map"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_map"/>
        <TextView
            android:id="@+id/tv_myrides"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sidebar_item"
            android:text="@string/item_my_rides"
            android:layout_toRightOf="@+id/iv_map"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@drawable/grey_selector"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:clickable="true">
        <ImageView
            android:id="@+id/iv_total"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_map"/>
        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sidebar_item"
            android:layout_toRightOf="@+id/iv_total"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@drawable/grey_selector"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:clickable="true">
        <ImageView
            android:id="@+id/iv_achievements"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_map"/>
        <TextView
            android:id="@+id/tv_myachievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sidebar_item"
            android:text="@string/item_my_achievements"
            android:layout_toRightOf="@+id/iv_achievements"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@drawable/grey_selector"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:clickable="true">
        <ImageView
            android:id="@+id/iv_logout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_map"/>
        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sidebar_item"
            android:text="@string/item_logout"
            android:layout_toRightOf="@+id/iv_logout"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"/>
    </RelativeLayout>
</LinearLayout>