<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sobag.parsetemplate.InitRideActivity"
    android:background="@color/default_background"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="1.0"
        android:layout_above="@+id/custom_button">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="0.5">
            <TextView
                android:tag="tv_location"
                android:id="@+id/tv_location"
                style="@style/section_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_location"/>
            <View
                style="@style/section_title_board_divider"
                android:id="@+id/view_divider"
                android:layout_below="@+id/tv_location"
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                />
            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:tag="frag_map"
                android:id="@+id/frag_map"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:name="com.google.android.gms.maps.MapFragment"
                android:layout_margin="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:orientation="vertical"
            android:layout_weight="0.5">
            <TextView
                android:tag="tv_image"
                android:id="@+id/tv_image"
                style="@style/section_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_image"/>
            <View
                style="@style/section_title_board_divider"
                android:id="@+id/another_view_divider"
                android:layout_below="@+id/tv_image"
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                />
            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/horizontalScrollView">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/dina4"
                        android:padding="10dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/dina4"
                        android:padding="10dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/dina4"
                        android:padding="10dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/dina4"
                        android:padding="10dp"/>
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/custom_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/signup_button_with_icon"
        android:clickable="true"
        android:onClick="onCreateRide"
        android:layout_alignParentBottom="true"
        >
        <ImageView
            android:layout_centerInParent="true"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:clickable="false"
            android:background="#00000000"
            android:padding="5dp"
            />
        <TextView
            android:tag="tv_start"
            android:id="@+id/tv_start"
            style="@style/signup_button_with_icon_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:background="#00000000"
            android:text="@string/but_start"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

    <ProgressBar
        android:tag="progressBar"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>
</RelativeLayout>
